--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm</artifactId>
+			<artifactId>asm-debug-all</artifactId>
 			<version>5.0.3</version>
 		</dependency>
 		<dependency>
