--- a/pom.xml
+++ b/pom.xml
@@ -342,6 +342,7 @@
 							<excludes>
                                 <exclude>**/org/sfm/sql2o/*</exclude>
                                 <exclude>**/org/sfm/**/*Spliterator*</exclude>
+								<exclude>**/org/sfm/**/*Optional*</exclude>
 							</excludes>
 						</configuration>
 
@@ -354,6 +355,7 @@
 										<exclude>**/org/sfm/sql2o/*</exclude>
                                         <exclude>**/org/sfm/tuples/fasttuple/**/*</exclude>
                                         <exclude>**/org/sfm/tuples/jool/**/*</exclude>
+										<exclude>**/org/sfm/**/*Optional*</exclude>
                                     </testExcludes>
 								</configuration>
 								<goals>
@@ -439,6 +441,7 @@
 
                             <excludes>
                                 <exclude>**/org/sfm/**/*Spliterator*</exclude>
+								<exclude>**/org/sfm/**/*Optional*</exclude>
                             </excludes>
 
                         </configuration>
@@ -450,6 +453,7 @@
                                 <configuration>
                                     <testExcludes>
                                         <exclude>**/org/sfm/tuples/jool/**/*</exclude>
+										<exclude>**/org/sfm/**/*Optional*</exclude>
                                     </testExcludes>
                                 </configuration>
                                 <goals>
