--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
 			</activation>
 			<properties>
 				<source.classifier>jdk16-sources</source.classifier>
-				<javadoc.classifier>jdk16-javadoc</javadoc.classifier>
+				<maven.javadoc.skip>true</maven.javadoc.skip>
 			</properties>
 
 			<build>
@@ -393,7 +393,7 @@
             </dependencies>
 			<properties>
 				<source.classifier>jdk17-sources</source.classifier>
-				<javadoc.classifier>jdk17-javadoc</javadoc.classifier>
+				<maven.javadoc.skip>true</maven.javadoc.skip>
 			</properties>
 			<build>
 				<plugins>
