--- a/pom.xml
+++ b/pom.xml
@@ -81,43 +81,43 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm-debug-all</artifactId>
-			<version>5.0.3</version>
+			<artifactId>asm-all</artifactId>
+			<version>5.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>4.0.6.RELEASE</version>
+			<version>4.1.6.RELEASE</version>
             <optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>javax.persistence</artifactId>
-			<version>2.0.0</version>
+			<version>2.1.0</version>
             <optional>true</optional>
         </dependency>
 		<dependency>
 			<groupId>org.sql2o</groupId>
 			<artifactId>sql2o</artifactId>
-			<version>1.5.3</version>
+			<version>1.5.4</version>
             <optional>true</optional>
         </dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>5.0.0</version>
+			<version>6.0.0</version>
             <optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
 			<artifactId>querydsl-sql</artifactId>
-			<version>3.6.2</version>
+			<version>3.6.3</version>
             <optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq</artifactId>
-			<version>3.4.2</version>
+			<version>3.6.1</version>
             <optional>true</optional>
 		</dependency>
 
@@ -138,7 +138,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -151,7 +151,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
+			<version>2.0.2-beta</version>
 			<scope>test</scope>
 		</dependency>
 
