--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,14 @@
             <optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.12</version>
+			<optional>true</optional>
+		</dependency>
+
+
 		<!--<dependency>-->
 			<!--<groupId>org.hibernate</groupId>-->
 			<!--<artifactId>hibernate-core</artifactId>-->
