#181 add joda time support

--- a/pom.xml
+++ b/pom.xml
@@ -358,9 +358,7 @@
                                 <exclude>**/org/sfm/sql2o/*</exclude>
                                 <exclude>**/org/sfm/**/*Spliterator*</exclude>
 								<exclude>**/org/sfm/**/*Optional*</exclude>
-								<exclude>**/org/sfm/jdbc/impl/getter/time/*</exclude>
-								<exclude>**/org/sfm/csv/impl/cellreader/time/*</exclude>
-								<exclude>**/org/sfm/map/column/time/*</exclude>
+								<exclude>**/org/sfm/**/time/*</exclude>
 							</excludes>
 						</configuration>
 
@@ -374,7 +372,7 @@
                                         <exclude>**/org/sfm/tuples/fasttuple/**/*</exclude>
                                         <exclude>**/org/sfm/tuples/jool/**/*</exclude>
 										<exclude>**/org/sfm/**/*Optional*</exclude>
-										<exclude>**/org/sfm/map/column/time/*</exclude>
+										<exclude>**/org/sfm/**/time/*</exclude>
                                     </testExcludes>
 								</configuration>
 								<goals>
@@ -461,9 +459,7 @@
                             <excludes>
                                 <exclude>**/org/sfm/**/*Spliterator*</exclude>
 								<exclude>**/org/sfm/**/*Optional*</exclude>
-								<exclude>**/org/sfm/jdbc/impl/getter/time/*</exclude>
-								<exclude>**/org/sfm/csv/impl/cellreader/time/*</exclude>
-								<exclude>**/org/sfm/map/column/time/*</exclude>
+								<exclude>**/org/sfm/**/time/*</exclude>
                             </excludes>
 
                         </configuration>
@@ -476,7 +472,7 @@
                                     <testExcludes>
                                         <exclude>**/org/sfm/tuples/jool/**/*</exclude>
 										<exclude>**/org/sfm/**/*Optional*</exclude>
-										<exclude>**/org/sfm/map/column/time/*</exclude>
+										<exclude>**/org/sfm/**/time/*</exclude>
                                     </testExcludes>
                                 </configuration>
                                 <goals>
