--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,19 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-core</artifactId>
+			<version>2.1.4</version>
+			<optional>true</optional>
+
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<!--<dependency>-->
 			<!--<groupId>org.hibernate</groupId>-->
