--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.simpleflatmapper</groupId>
 	<artifactId>simpleFlatMapper</artifactId>
-	<version>1.10.2-SNAPSHOT</version>
+	<version>1.10.2</version>
 	<packaging>bundle</packaging>
 
 	<name>SimpleFlatMapper</name>
@@ -31,7 +31,7 @@
 		<url>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</url>
 		<connection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</connection>
 		<developerConnection>scm:git:git@github.com:arnaudroger/SimpleFlatMapper.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>simpleFlatMapper-1.10.2</tag>
   </scm>
 
 	<properties>
