--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -54,6 +54,12 @@
 	<profiles>
 		<profile>
 			<id>travis</id>
+			<activation>
+				<property>
+					<name>env.TRAVIS</name>
+					<value>true</value>
+				</property>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
