--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -60,6 +60,23 @@
 	</dependencies>
 	<profiles>
 		<profile>
+			<id>travis</id>
+			<activation>
+				<property>
+					<name>env.TRAVIS</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>jdk16</id>
 			<build>
 				<plugins>
