--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -45,6 +45,41 @@
 			<artifactId>sfm</artifactId>
 			<version>1.10.4-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cassandraunit</groupId>
+			<artifactId>cassandra-unit</artifactId>
+			<version>2.1.3.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.cassandra</groupId>
+					<artifactId>cassandra-all</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cassandra</groupId>
+			<artifactId>cassandra-all</artifactId>
+			<version>2.1.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>17.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm-test</artifactId>
+			<version>1.10.4-SNAPSHOT</version>
+		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.xerial.snappy</groupId>-->
+			<!--<artifactId>snappy-java</artifactId>-->
+			<!--<version>1.1.1.7</version>-->
+		<!--</dependency>-->
 	</dependencies>
 	<profiles>
 		<profile>
