--- a/sfm-datastax/src/test/resources/log4j.properties
+++ b/sfm-datastax/src/test/resources/log4j.properties
@@ -1,8 +1,7 @@
 # Root logger option
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, out
 
 # Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.out=org.apache.log4j.ConsoleAppender
+log4j.appender.out.layout=org.apache.log4j.PatternLayout
+log4j.appender.out.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
