--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.simpleflatmapper</groupId>
     <artifactId>sfm-parent</artifactId>
-    <version>1.10.4-SNAPSHOT</version>
+    <version>1.11.0.b1</version>
     <packaging>pom</packaging>
 
     <name>sfm-parent</name>
@@ -34,7 +33,7 @@
         <url>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</url>
         <connection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</connection>
         <developerConnection>scm:git:git@github.com:arnaudroger/SimpleFlatMapper.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.11.0.b1</tag>
     </scm>
 
     <properties>
