--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>1.10.4-SNAPSHOT</version>
+		<version>1.11.0.b1</version>
 	</parent>
 
 	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
@@ -45,12 +45,12 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm</artifactId>
-			<version>1.10.4-SNAPSHOT</version>
+			<version>1.11.0.b1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>1.10.4-SNAPSHOT</version>
+			<version>1.11.0.b1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
