--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.simpleflatmapper</groupId>
     <artifactId>sfm-parent</artifactId>
-    <version>1.11.0.b1</version>
+    <version>1.11.0.b2</version>
     <packaging>pom</packaging>
 
     <name>sfm-parent</name>
@@ -33,7 +33,7 @@
         <url>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</url>
         <connection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</connection>
         <developerConnection>scm:git:git@github.com:arnaudroger/SimpleFlatMapper.git</developerConnection>
-        <tag>1.11.0.b1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
