--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.simpleflatmapper</groupId>
     <artifactId>sfm-parent</artifactId>
-    <version>1.11.0.b2</version>
+    <version>1.11b1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>sfm-parent</name>
