--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>1.11.0.b2</version>
+		<version>1.11b1-SNAPSHOT</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm</artifactId>
-			<version>1.11.0.b2</version>
+			<version>1.11b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>1.11.0.b2</version>
+			<version>1.11b1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
