--- a/sfm-springjdbc/pom.xml
+++ b/sfm-springjdbc/pom.xml
@@ -8,7 +8,7 @@
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
-		<version>1.11.0.b2</version>
+		<version>1.11b1-SNAPSHOT</version>
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
@@ -44,12 +44,12 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm</artifactId>
-			<version>1.11.0.b2</version>
+			<version>1.11b1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
-			<version>1.11.0.b2</version>
+			<version>1.11b1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
