--- a/sfm-test/pom.xml
+++ b/sfm-test/pom.xml
@@ -20,6 +20,10 @@
 		</developer>
 	</developers>
 
+	<properties>
+		<skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+	</properties>
+
 	<licenses>
 		<license>
 			<name>The MIT License (MIT)</name>
@@ -27,6 +31,19 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
