#208 exclude sfm-sql2o on java6

--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -78,6 +78,9 @@
 		</profile>
 		<profile>
 			<id>jdk16</id>
+			<properties>
+				<skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
