--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -117,6 +117,20 @@
 			</build>
 		</profile>
 		<profile>
+			<id>jdk8</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.felix</groupId>
+						<artifactId>maven-bundle-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>ga</id>
 			<build>
 				<plugins>
