#213 add missing activation for jdk16

--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -101,6 +101,9 @@
 		</profile>
 		<profile>
 			<id>jdk16</id>
+			<activation>
+				<jdk>1.6</jdk>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
