--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -78,6 +78,9 @@
 		</profile>
 		<profile>
 			<id>jdk16</id>
+			<activation>
+				<jdk>1.6</jdk>
+			</activation>
 			<properties>
 				<skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
 			</properties>
