--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -40,7 +41,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <source.classifier>sources</source.classifier>
         <javadoc.classifier>javadoc</javadoc.classifier>
-        <jar.classifier />
+        <jar.classifier/>
     </properties>
 
     <modules>
@@ -52,7 +53,8 @@
         <module>sfm-sql2o</module>
         <module>sfm-springjdbc</module>
         <module>sfm-test</module>
-    </modules>
+    <module>sfm-benchmark</module>
+  </modules>
 
     <build>
         <pluginManagement>
