--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.simpleflatmapper</groupId>
     <artifactId>sfm-parent</artifactId>
-    <version>2.0</version>
+    <version>2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>sfm-parent</name>
@@ -34,7 +34,7 @@
         <url>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</url>
         <connection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</connection>
         <developerConnection>scm:git:git@github.com:arnaudroger/SimpleFlatMapper.git</developerConnection>
-        <tag>2.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
