--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,6 @@
         <module>sfm-jooq</module>
         <module>sfm-poi</module>
         <module>sfm-querydsl</module>
-        <module>sfm-sql2o</module>
         <module>sfm-springjdbc</module>
         <module>sfm-test</module>
   </modules>
@@ -216,7 +215,6 @@
                             <source>1.6</source>
                             <target>1.6</target>
                             <excludes>
-                                <exclude>**/org/sfm/sql2o/*</exclude>
                                 <exclude>**/org/sfm/**/*Spliterator*</exclude>
                                 <exclude>**/org/sfm/**/*Optional*</exclude>
                                 <exclude>**/org/sfm/**/time/*</exclude>
@@ -229,7 +227,6 @@
                                 <phase>test-compile</phase>
                                 <configuration>
                                     <testExcludes>
-                                        <exclude>**/org/sfm/sql2o/*</exclude>
                                         <exclude>**/org/sfm/tuples/fasttuple/**/*</exclude>
                                         <exclude>**/org/sfm/tuples/jool/**/*</exclude>
                                         <exclude>**/org/sfm/**/*Optional*</exclude>
@@ -257,6 +254,10 @@
                 <maven.javadoc.skip>true</maven.javadoc.skip>
                 <jar.classifier>jdk17</jar.classifier>
             </properties>
+
+            <modules>
+                <module>sfm-sql2o</module>
+            </modules>
             <build>
                 <pluginManagement>
                 <plugins>
@@ -331,6 +332,16 @@
                 </plugins>
                 </pluginManagement>
             </build>
+        </profile>
+
+        <profile>
+            <id>jdk18</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
+            <modules>
+                <module>sfm-sql2o</module>
+            </modules>
         </profile>
         <profile>
             <id>release-sign-artifacts</id>
