add a dev profile for non deployable

--- a/pom.xml
+++ b/pom.xml
@@ -422,6 +422,13 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>dev</id>
+            <modules>
+                <module>sfm-benchmark</module>
+                <module>sfm-osgitest</module>
+            </modules>
+        </profile>
     </profiles>
 
     <repositories>
