--- a/sfm-benchmark/pom.xml
+++ b/sfm-benchmark/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
 		<artifactId>sfm-parent</artifactId>
-		<version>2.2</version>
+		<version>2.3-SNAPSHOT</version>
 	</parent>
 
     <groupId>org.simpleflatmapper.benchmark</groupId>
@@ -38,7 +38,7 @@
         <url>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</url>
         <connection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</connection>
         <developerConnection>scm:git:git@github.com:arnaudroger/SimpleFlatMapper.git</developerConnection>
-        <tag>sfm-parent-2.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
