--- a/sfm-benchmark/sfm-benchmark-roma/pom.xml
+++ b/sfm-benchmark/sfm-benchmark-roma/pom.xml
@@ -34,7 +34,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
     <parent>
         <groupId>org.simpleflatmapper.benchmark</groupId>
         <artifactId>sfm-benchmark</artifactId>
-        <version>2.2</version>
+        <version>2.3-SNAPSHOT</version>
     </parent>
 
     <groupId>org.simpleflatmapper</groupId>
@@ -65,12 +65,12 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-benchmark-common-db</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.simpleflatmapper</groupId>
             <artifactId>sfm-benchmark-common</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
