--- a/sfm-sql2o/pom.xml
+++ b/sfm-sql2o/pom.xml
@@ -10,7 +10,7 @@
 		<version>2.3-SNAPSHOT</version>
 	</parent>
 
-	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
+	<description>Sql2o supports.</description>
 
 	<licenses>
 		<license>
