--- a/sfm-jooq/pom.xml
+++ b/sfm-jooq/pom.xml
@@ -11,7 +11,7 @@
 		<version>2.3-SNAPSHOT</version>
 	</parent>
 
-	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
+	<description>jOOQ supports.</description>
 
 	<licenses>
 		<license>
