--- a/sfm-poi/pom.xml
+++ b/sfm-poi/pom.xml
@@ -13,7 +13,7 @@
 	<name>sfm-poi</name>
 	<url>http://github.com/arnaudroger/SimpleFlatMapper</url>
 
-	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
+	<description>Excel POI supports.</description>
 
 
 	<licenses>
