--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -10,7 +10,7 @@
 		<artifactId>sfm-parent</artifactId>
 	</parent>
 
-	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
+	<description>QueryDSL supports.</description>
 
 	<licenses>
 		<license>
