--- a/sfm-springjdbc/pom.xml
+++ b/sfm-springjdbc/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>sfm-springjdbc</artifactId>
 	<packaging>bundle</packaging>
 
-	<description>Java library to map flat record - ResultSet, csv - to java object with minimum configuration and low footprint.</description>
+	<description>SpringJdbc supports.</description>
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
