--- a/sfm-test-osgi/pom.xml
+++ b/sfm-test-osgi/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-osgitest</artifactId>
+	<artifactId>sfm-test-osgi</artifactId>
 	<packaging>bundle</packaging>
 
 	<version>2.6-SNAPSHOT</version>
