#285 add sandbox test

--- a/pom.xml
+++ b/pom.xml
@@ -414,6 +414,7 @@
                 <jdk>1.8</jdk>
             </activation>
             <modules>
+                <module>sfm-test-sandbox</module>
                 <module>sfm-test-osgi</module>
                 <module>sfm-test-lombok</module>
             </modules>
