--- a/sfm-test-sandbox/pom.xml
+++ b/sfm-test-sandbox/pom.xml
@@ -2,10 +2,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-test-osgi</artifactId>
+	<artifactId>sfm-test-sandbox</artifactId>
 	<packaging>jar</packaging>
 
-	<version>2.7.6-SNAPSHOT</version>
+	<version>2.7.5-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -33,23 +33,9 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm</artifactId>
-			<version>2.7.6-SNAPSHOT</version>
+			<version>2.7.5-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.simpleflatmapper</groupId>
-			<artifactId>sfm-poi</artifactId>
-			<version>2.7.6-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.framework</artifactId>
-			<version>5.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
-		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -58,16 +44,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.ops4j.pax.tinybundles</groupId>
-			<artifactId>tinybundles</artifactId>
-			<version>2.1.1</version>
-		</dependency>
 
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.5</version>
-		</dependency>
 	</dependencies>
 </project>
