#289 make fieldkay abstract instead of interface

--- a/pom.xml
+++ b/pom.xml
@@ -418,6 +418,7 @@
                 <module>sfm-test-osgi</module>
                 <module>sfm-test-lombok</module>
                 <module>sfm-test-immutables</module>
+                <module>sfm-jmh</module>
             </modules>
         </profile>
     </profiles>
