--- a/pom.xml
+++ b/pom.xml
@@ -407,10 +407,10 @@
         <profile>
             <id>dev</id>
             <activation>
-                <property>
-                    <name>env.TRAVIS</name>
-                    <value>true</value>
-                </property>
+                <!--<property>-->
+                    <!--<name>env.TRAVIS</name>-->
+                    <!--<value>true</value>-->
+                <!--</property>-->
                 <jdk>1.8</jdk>
             </activation>
             <modules>
