--- a/sfm-datastax-3/pom.xml
+++ b/sfm-datastax-3/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.simpleflatmapper</groupId>
-	<artifactId>sfm-datastax-2_1</artifactId>
+	<artifactId>sfm-datastax-3</artifactId>
 	<packaging>jar</packaging>
 	<version>2.10.2-SNAPSHOT</version>
 
-	<description>Cassandra Datastax 2.1 test.</description>
+	<description>Cassandra Datastax 3 test.</description>
 
 
 	<licenses>
@@ -79,12 +79,12 @@
 		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-core</artifactId>
-			<version>2.1.8</version>
+			<version>3.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-mapping</artifactId>
-			<version>2.1.8</version>
+			<version>3.0.3</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -96,7 +96,7 @@
 		<dependency>
 			<groupId>org.cassandraunit</groupId>
 			<artifactId>cassandra-unit</artifactId>
-			<version>2.1.3.1</version>
+			<version>3.0.0.1</version>
 			<scope>test</scope>
 		</dependency>
 
