--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -46,12 +46,12 @@
 		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-core</artifactId>
-			<version>3.0.3</version>
+			<version>2.1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-mapping</artifactId>
-			<version>3.0.3</version>
+			<version>2.1.8</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>org.cassandraunit</groupId>
 			<artifactId>cassandra-unit</artifactId>
-			<version>3.0.0.1</version>
+			<version>2.1.3.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -162,6 +162,9 @@
 				</plugins>
 
 			</build>
+			<properties>
+				<skipTests>true</skipTests>
+			</properties>
 		</profile>
 	</profiles>
 </project>
