#328 increase perm gen

--- a/sfm-datastax/pom.xml
+++ b/sfm-datastax/pom.xml
@@ -157,6 +157,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
+							<argLine>-XX:MaxPermSize=256m</argLine>
 							<excludes>
 								<exclude>**/Datastax3Test.java</exclude>
 							</excludes>
