--- a/pom.xml
+++ b/pom.xml
@@ -319,7 +319,7 @@
         <profile>
             <id>jdk18</id>
             <activation>
-                <jdk>[1.8,)</jdk>
+                <jdk>1.8</jdk>
             </activation>
             <modules>
                 <module>sfm-sql2o</module>
@@ -420,6 +420,27 @@
                 <module>sfm-test-immutables</module>
                 <module>sfm-jmh</module>
             </modules>
+        </profile>
+
+        <profile>
+            <id>jdk19</id>
+            <activation>
+                <jdk>9-ea</jdk>
+            </activation>
+            <build>
+                <plugins>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.5.1</version>
+                        <configuration>
+                            <source>9</source>
+                            <target>9</target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
