--- a/sfm-querydsl/pom.xml
+++ b/sfm-querydsl/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>sfm-querydsl</artifactId>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
