--- a/sfm/pom.xml
+++ b/sfm/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>sfm</artifactId>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.simpleflatmapper</groupId>
@@ -153,6 +153,7 @@
 					<artifactId>fasttuple-core</artifactId>
 					<version>0.1</version>
 					<optional>true</optional>
+					<scope>test</scope>
 				</dependency>
 			</dependencies>
 			<build>
@@ -175,7 +176,7 @@
 		<profile>
 			<id>jdk18</id>
 			<activation>
-				<jdk>[1.8,)</jdk>
+				<jdk>1.8</jdk>
 			</activation>
 			<dependencies>
 				<dependency>
@@ -183,12 +184,79 @@
 					<artifactId>jool</artifactId>
 					<version>0.9.10</version>
 					<optional>true</optional>
+					<scope>test</scope>
 				</dependency>
 				<dependency>
 					<groupId>com.boundary</groupId>
 					<artifactId>fasttuple-core</artifactId>
 					<version>0.1</version>
 					<optional>true</optional>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>jdk19</id>
+			<activation>
+				<jdk>9-ea</jdk>
+			</activation>
+			<build>
+				<plugins>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.6-jigsaw-SNAPSHOT</version>
+						<!--<configuration>-->
+							<!--<compilerArgs>-->
+								<!--<arg>-modulepath /Users/aroger/.m2/repository/org/ow2/asm/asm/5.1/asm-5.1.jar</arg>-->
+							<!--</compilerArgs>-->
+						<!--</configuration>-->
+						<dependencies>
+							<dependency>
+								<groupId>org.codehaus.plexus</groupId>
+								<artifactId>plexus-compiler-javac</artifactId>
+								<version>2.8</version>
+							</dependency>
+							<dependency>
+								<groupId>org.codehaus.plexus</groupId>
+								<artifactId>plexus-compiler-api</artifactId>
+								<version>2.8</version>
+							</dependency>
+							<dependency>
+								<groupId>org.codehaus.plexus</groupId>
+								<artifactId>plexus-compiler-manager</artifactId>
+								<version>2.8</version>
+							</dependency>
+							<dependency>
+								<groupId>org.ow2.asm</groupId>
+								<artifactId>asm</artifactId>
+								<version>6.0_ALPHA</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.jooq</groupId>
+					<artifactId>jool</artifactId>
+					<version>0.9.10</version>
+					<optional>true</optional>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>com.boundary</groupId>
+					<artifactId>fasttuple-core</artifactId>
+					<version>0.1</version>
+					<optional>true</optional>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.ow2.asm</groupId>
+					<artifactId>asm</artifactId>
+					<version>6.0_ALPHA</version>
 				</dependency>
 			</dependencies>
 		</profile>
